# serinv

./: .buildinfo  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yml  genindex.html  index.html  justfile  objects.inv  py-modindex.html  pyproject.toml  run_streamlined_sequential_pobtax_gpu.sh  search.html  searchindex.js  setup.py  test_d_pobtasi.sh
.doctrees/: index.doctree
.doctrees/api/: cholesky.doctree  cholesky_dist.doctree  cholesky_factorize.doctree  cholesky_factorize_gpu.doctree  cholesky_selected_inversion.doctree  cholesky_selected_inversion_gpu.doctree  cholesky_solve.doctree  index.doctree  lu.doctree  lu_dist.doctree  lu_factorize.doctree  lu_factorize_gpu.doctree  lu_selected_inversion.doctree  lu_selected_inversion_gpu.doctree  lu_solve.doctree
.github/workflows/: doc.yml  test.yml
_sources/: index.rst.txt
_sources/api/: cholesky.rst.txt  lu_dist.rst.txt
api/: cholesky.html  cholesky_dist.html  cholesky_factorize.html  cholesky_factorize_gpu.html  cholesky_selected_inversion.html  cholesky_selected_inversion_gpu.html  cholesky_solve.html  index.html  lu.html  lu_dist.html  lu_factorize.html  lu_factorize_gpu.html  lu_selected_inversion.html  lu_selected_inversion_gpu.html  lu_solve.html
bench/: .gitignore  abg_minibench.py  benchmark_Chol_selInv.py  benchmark_SchurInv.py  benchmark_d_pobtaf_d_pobtasi_synthetic_arrays.py  benchmark_gpuarray_pobtaf_pobtasi.py  benchmark_pobtaf_pobtasi.py  benchmark_pobtaf_pobtasi_synthetic_arrays.py  benchmark_pobtaf_pobtasi_with_timers_synthetic_arrays.py  benchmark_select_gpu.py  bta_partitionning.py  bta_sequentiallity.py  color_gradient.py  color_scheme_pickup.py  complexity_analysis.py  convert_inlamat_to_distributed_dataset.py  generate_synthetic_dataset.py  load_datmat.py  matrix_utilities.py  matrix_utilities_CS1.py  matrix_utilities_CS2.py  matutils.py  permutation_scheme.py  plot_nested_solve.py  plot_pie_chart.py  plot_sequential_perf_matrix.py  plot_sparsity_pattern.py  plot_strong_scaling.py  plot_strong_scaling_2865.py  plot_strong_scaling_4002.py  plot_weak_scaling.py  plot_weak_scaling_new.py  post_process_for_FLOPS.py  post_process_timings.py  print_barchart_4002.py  print_comparison_2865_d3pct.py  print_comparison_2865_d5pct.py  print_comparison_2865_original.py  print_comparison_case1.py  run_benchmark.sh  (+36 more)
examples/: cholesky_decomposition_example.ipynb  cholesky_selected_inversion_example.ipynb  cholesky_solve_example.ipynb  lu_decomposition_example.ipynb  lu_selected_inversion_example.ipynb  lu_selected_inversion_example.py  lu_solve_example.ipynb
perfbench/: perfbench_ddbt_cpu.py  perfbench_ddbt_cpu.sh  perfbench_ddbt_gpu.py  perfbench_ddbt_gpu.sh  perfbench_ddbta_cpu.py  perfbench_ddbta_cpu.sh  perfbench_ddbta_gpu.py  perfbench_ddbta_gpu.sh  perfbench_pddbt_cpu.py  perfbench_pddbt_cpu.sh  perfbench_pddbt_nccl_gpu.py  perfbench_pddbt_nccl_gpu.sh  perfbench_pddbta_cpu.py  perfbench_pddbta_cpu.sh  perfbench_pddbta_nccl_gpu.py  perfbench_pddbta_nccl_gpu.sh
src/: tracing.py
tests/: cholesky_decompose_tests.py  conftest.py  matrix_generation_tests.py  matrix_transform_tests.py  run_tests_daint_distributed.sh  run_tests_daint_sequential.sh  run_tests_distributed.sh  run_tests_sequential.sh  testing_utils.py
(+524 files in other folders)
