[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "SDR"
version = "0.1"
authors = [{ name = "Vincent Maillou", email = "vmaillou@iis.ee.ethz.ch" },
           { name = "Lisa Gaedke-Merzhaeuser", email = "lisa.gaedke.merzhaeuser@usi.ch" }]
description = "Implementations of selected factorizations algorithms and solvers"
readme = "README.MD"
requires-python = ">=3.9"
license = {text = "GPL-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL-3.0 License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "mpi4py",
    "pytest",
    "pytest-mpi",
    "pytest-cov",
    "coverage",
]

[project.urls]
repository = "https://github.com/vincent-maillou/SDR"

[tool.setuptools.dynamic]
version = { attr = "sdr" }