[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "SerinV"
version = "0.1"
authors = [{ name = "Vincent Maillou", email = "vmaillou@iis.ee.ethz.ch" },
           { name = "Dr. Lisa Gaedke-Merzhaeuser", email = "lisa.gaedke.merzhaeuser@usi.ch" },
           { name = "Dr. Alexandros Nikolaos Ziogas", email = "alziogas@iis.ee.ethz.ch" }]
description = "Implementations of selected -factorization, -inversion and -solving algorithms."
readme = "README.MD"
requires-python = ">=3.9"
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pydantic",
    "pytest",
    "pytest-mpi",
    "pytest-cov",
    "coverage",
]
[project.optional-dependencies]
cupy = ["cupy==13.2.0"]
mpi4py = ["mpi4py"]

[project.urls]
repository = "https://github.com/vincent-maillou/serinv"

[tool.setuptools.dynamic]
version = { attr = "serinv.__about__.__version__" }

[tool.isort]
profile = "black"